--- a/photography.html
+++ b/photography.html
@@ -108,7 +108,6 @@
               </li>
             </ul>
          </div>
-
       <div  class = "text-center hide-small">
         <a href="https://vimeo.com/user65399121" target = "_blank">
           <i class="fa-lg fab fa-vimeo-v social-padding">
@@ -125,50 +124,41 @@
        </div>
        <div class = "main-container">
          <div class="row">
-
            <!--Grid column-->
            <div class="col-12 mb-4">
-
-             <img src="https://i.lensdump.com/i/I2JjY5.jpg" alt="1" class="img-fluid mb-4">
-
+             <img src="https://i.lensdump.com/i/I2JjY5.jpg" alt="Katie-1" class="img-fluid mb-4">
            </div>
-           <!--Grid column-->
-
            <!--Grid column-->
            <div class="col-lg-6 col-md-12 mb-4">
-
-             <img src="https://i.lensdump.com/i/I2JI2z.jpg" alt="7" class="img-fluid mb-4">
-
-             <img src="https://i1.lensdump.com/i/I2JgSb.jpg" alt="9" class="img-fluid mb-4">
-
+             <img src="https://i.lensdump.com/i/I2JI2z.jpg" alt="Katie-2" class="img-fluid mb-4">
+             <img src="https://i1.lensdump.com/i/I2JgSb.jpg" alt="Katie-3" class="img-fluid mb-4">
            </div>
-           <!--Grid column-->
-
            <!--Grid column-->
            <div class="col-lg-6 col-md-6 mb-4">
-
-             <img src="https://i1.lensdump.com/i/I2JZJT.jpg" alt="8" class="img-fluid mb-4">
-
-             <img src="https://i.lensdump.com/i/I2Jrx7.jpg" alt="10" class="img-fluid mb-4">
-
+             <img src="https://i1.lensdump.com/i/I2JZJT.jpg" alt="Katie-4" class="img-fluid mb-4">
+             <img src="https://i.lensdump.com/i/I2Jrx7.jpg" alt="Katie-5" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
            <div class="col-12 mb-4">
-
-             <img src="https://i.lensdump.com/i/I2J1Rr.jpg" alt="24" class="img-fluid mb-4">
-
+             <img src="https://i.lensdump.com/i/I2J1Rr.jpg" alt="Katie-6" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
            <div class="col-12 mb-4">
-
-             <img src="https://i1.lensdump.com/i/I2JRpF.jpg" alt="25" class="img-fluid mb-4">
-
+             <img src="https://i1.lensdump.com/i/I2JRpF.jpg" alt="Katie-6" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
            <div class="col-12 mb-4">
-
-             <img src="https://i1.lensdump.com/i/I2JTF3.jpg" alt="26" class="img-fluid mb-4">
-
+             <img src="https://i1.lensdump.com/i/I2JTF3.jpg" alt="Katie-7" class="img-fluid mb-4">
+          </div>
+           <!--Grid column-->
+           <div class="col-lg-6 col-md-12 mb-4">
+             <img src="https://i.lensdump.com/i/I2JkI0.jpg" alt="1" class="img-fluid mb-4">
+             <img src="https://i.lensdump.com/i/I2J6BD.jpg" alt="2" class="img-fluid mb-4">
+           </div>
+           <!--Grid column-->
+           <div class="col-lg-6 col-md-6 mb-4">
+             <img src="https://i1.lensdump.com/i/I2JCoq.jpg" alt="3" class="img-fluid mb-4">
+             <img src="https://i.lensdump.com/i/I2JQ8A.jpg" alt="4" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
          </div>
