All images of Chloe Added

--- a/photography.html
+++ b/photography.html
@@ -152,13 +152,18 @@
           </div>
            <!--Grid column-->
            <div class="col-lg-6 col-md-12 mb-4">
-             <img src="https://i.lensdump.com/i/I2JkI0.jpg" alt="1" class="img-fluid mb-4">
-             <img src="https://i.lensdump.com/i/I2J6BD.jpg" alt="2" class="img-fluid mb-4">
+             <img src="https://i.lensdump.com/i/I2JkI0.jpg" alt="Chloe-1" class="img-fluid mb-4">
+             <img src="https://i.lensdump.com/i/I2J6BD.jpg" alt="Chloe-2" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
            <div class="col-lg-6 col-md-6 mb-4">
-             <img src="https://i1.lensdump.com/i/I2JCoq.jpg" alt="3" class="img-fluid mb-4">
-             <img src="https://i.lensdump.com/i/I2JQ8A.jpg" alt="4" class="img-fluid mb-4">
+             <img src="https://i1.lensdump.com/i/I2JCoq.jpg" alt="Chloe-3" class="img-fluid mb-4">
+             <img src="https://i.lensdump.com/i/I2JQ8A.jpg" alt="Chloe-4" class="img-fluid mb-4">
+           </div>
+           <!--Grid column-->
+           <div class="col-lg-6 col-md-6 mb-4">
+             <img src="https://i.lensdump.com/i/I2JVJM.jpg" alt="Chloe-5" class="img-fluid mb-4">
+             <img src="https://i1.lensdump.com/i/I2J9eQ.jpg" alt="Chloe-6" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
          </div>
