--- a/photography.html
+++ b/photography.html
@@ -129,7 +129,7 @@
              <img src="https://i.lensdump.com/i/I2JjY5.jpg" alt="Katie-1" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-lg-6 col-md-12 mb-4">
+           <div class="col-lg-6 col-md-6 mb-4">
              <img src="https://i.lensdump.com/i/I2JI2z.jpg" alt="Katie-2" class="img-fluid mb-4">
              <img src="https://i1.lensdump.com/i/I2JgSb.jpg" alt="Katie-3" class="img-fluid mb-4">
            </div>
@@ -163,7 +163,18 @@
            <!--Grid column-->
            <div class="col-lg-6 col-md-6 mb-4">
              <img src="https://i.lensdump.com/i/I2JVJM.jpg" alt="Chloe-5" class="img-fluid mb-4">
+           </div>
+           <!--Grid column-->
+           <div class="col-lg-6 col-md-6 mb-4">
              <img src="https://i1.lensdump.com/i/I2J9eQ.jpg" alt="Chloe-6" class="img-fluid mb-4">
+           </div>
+           <!--Grid column-->
+           <div class="col-lg-6 col-md-6 mb-4">
+             <img src="https://i.lensdump.com/i/I2JW0v.jpg" alt="Georgie-1" class="img-fluid mb-4">
+           </div>
+           <!--Grid column-->
+           <div class="col-lg-6 col-md-6 mb-4">
+             <img src="https://i.lensdump.com/i/I2J8F2.jpg" alt="Georgie-2" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
          </div>
