fixed image layout

--- a/photography.html
+++ b/photography.html
@@ -131,11 +131,17 @@
            <!--Grid column-->
            <div class="col-lg-6 col-md-6 mb-4">
              <img src="https://i.lensdump.com/i/I2JI2z.jpg" alt="Katie-2" class="img-fluid mb-4">
-             <img src="https://i1.lensdump.com/i/I2JgSb.jpg" alt="Katie-3" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
            <div class="col-lg-6 col-md-6 mb-4">
-             <img src="https://i1.lensdump.com/i/I2JZJT.jpg" alt="Katie-4" class="img-fluid mb-4">
+             <img src="https://i1.lensdump.com/i/I2JZJT.jpg" alt="Katie-3" class="img-fluid mb-4">
+           </div>
+           <!--Grid column-->
+           <div class="col-lg-6 col-md-6 mb-4">
+             <img src="https://i1.lensdump.com/i/I2JgSb.jpg" alt="Katie-4" class="img-fluid mb-4">
+           </div>
+           <!--Grid column-->
+           <div class="col-lg-6 col-md-6 mb-4">
              <img src="https://i.lensdump.com/i/I2Jrx7.jpg" alt="Katie-5" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
@@ -175,6 +181,22 @@
            <!--Grid column-->
            <div class="col-lg-6 col-md-6 mb-4">
              <img src="https://i.lensdump.com/i/I2J8F2.jpg" alt="Georgie-2" class="img-fluid mb-4">
+           </div>
+           <!--Grid column-->
+           <div class="col-lg-6 col-md-6 mb-4">
+             <img src="https://i1.lensdump.com/i/I2J2p9.jpg" alt="Georgie-3" class="img-fluid mb-4">
+           </div>
+           <!--Grid column-->
+           <div class="col-lg-6 col-md-6 mb-4">
+             <img src="https://i1.lensdump.com/i/I2Ch1o.jpg" alt="Georgie-4" class="img-fluid mb-4">
+           </div>
+           <!--Grid column-->
+           <div class="col-lg-6 col-md-6 mb-4">
+             <img src="https://i.lensdump.com/i/I2CGxi.jpg" alt="Georgie-5" class="img-fluid mb-4">
+           </div>
+           <!--Grid column-->
+           <div class="col-lg-6 col-md-6 mb-4">
+             <img src="https://i.lensdump.com/i/I2C5Sm.jpg" alt="Georgie-6" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
          </div>
