All Images Added

--- a/photography.html
+++ b/photography.html
@@ -199,7 +199,28 @@
              <img src="https://i.lensdump.com/i/I2C5Sm.jpg" alt="Georgie-6" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
+           <div class="col-lg-4 col-md-4 mb-4">
+             <img src="https://i1.lensdump.com/i/I2JKm1.jpg" alt="David-1" class="img-fluid mb-4">
+           </div>
+           <!--Grid column-->
+           <div class="col-lg-4 col-md-4 mb-4">
+             <img src="https://i1.lensdump.com/i/I2J4IH.jpg" alt="David-2" class="img-fluid mb-4">
+           </div>
+           <!--Grid column-->
+           <div class="col-lg-4 col-md-4 mb-4">
+             <img src="https://i.lensdump.com/i/I2Jpoc.jpg" alt="David-3" class="img-fluid mb-4">
+           </div>
+           <!--Grid column-->
+           <div class="col-lg-6 col-md-6 mb-4">
+             <img src="https://i1.lensdump.com/i/I2JHQZ.jpg" alt="Abbie-1" class="img-fluid mb-4">
+             <img src="https://i1.lensdump.com/i/I2JO8K.jpg" alt="Abbie-2" class="img-fluid mb-4">
+          </div>
+          <!--Grid column-->
+          <div class="col-lg-6 col-md-6 mb-4">
+            <img src="https://i.lensdump.com/i/I2JleP.jpg" alt="Abbie-3" class="img-fluid mb-4">
+            <img src="https://i.lensdump.com/i/I2Jzym.jpg" alt="Abbie-4" class="img-fluid mb-4">
          </div>
+         <!--Grid column-->
       </div>
     </div>
   </body>
