--- a/photography.html
+++ b/photography.html
@@ -133,11 +133,11 @@
              <img src="https://i.lensdump.com/i/I2J1Rr.jpg" alt="Katie-6" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-6 mb-4">
+           <div class="col-md-6 col-sm-12 mb-4">
              <img src="https://i1.lensdump.com/i/I2JRpF.jpg" alt="Katie-7" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-6 mb-4">
+           <div class="col-md-6 col-sm-12 mb-4">
              <img src="https://i1.lensdump.com/i/I2JTF3.jpg" alt="Katie-8" class="img-fluid mb-4">
           </div>
            <!--Grid column-->
@@ -153,10 +153,6 @@
              <img src="https://i1.lensdump.com/i/I2JgSb.jpg" alt="Katie-4" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-lg-12 col-md-6 mb-4">
-             <img src="https://i1.lensdump.com/i/I2JZJT.jpg" alt="Katie-3" class="img-fluid mb-4">
-           </div>
-           <!--Grid column-->
            <div class="col-lg-4 col-md-12 mb-4">
              <img src="https://i1.lensdump.com/i/I2JCoq.jpg" alt="Chloe-3" class="img-fluid mb-4">
            </div>
@@ -169,11 +165,15 @@
              <img src="https://i.lensdump.com/i/I2JQ8A.jpg" alt="Chloe-4" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-lg-6 col-md-6 mb-4">
+           <div class="col-lg-4 col-md-6 mb-4">
              <img src="https://i.lensdump.com/i/I2JVJM.jpg" alt="Chloe-5" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-lg-6 col-md-6 mb-4">
+           <div class="col-lg-4 col-md-6 mb-4">
+             <img src="https://i.lensdump.com/i/I2J6BD.jpg" alt="Chloe-2" class="img-fluid mb-4">
+           </div>
+           <!--Grid column-->
+           <div class="col-lg-4 col-md-6 mb-4">
              <img src="https://i1.lensdump.com/i/I2J9eQ.jpg" alt="Chloe-6" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
