--- a/photography.html
+++ b/photography.html
@@ -133,79 +133,79 @@
              <img src="https://i.lensdump.com/i/I2J1Rr.jpg" alt="Katie-6" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-md-6 col-sm-12 mb-4">
+           <div class="col-sm-6 col-12 mb-4">
              <img src="https://i1.lensdump.com/i/I2JRpF.jpg" alt="Katie-7" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-md-6 col-sm-12 mb-4">
+           <div class="col-sm-6 col-12 mb-4">
              <img src="https://i1.lensdump.com/i/I2JTF3.jpg" alt="Katie-8" class="img-fluid mb-4">
           </div>
            <!--Grid column-->
-           <div class="col-lg-4 col-md-6 mb-4">
+           <div class="col-sm-4 col-12 mb-4">
              <img src="https://i.lensdump.com/i/I2Jrx7.jpg" alt="Katie-5" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-lg-4 col-md-6 mb-4">
+           <div class="col-sm-4 col-12 mb-4">
              <img src="https://i.lensdump.com/i/I2JI2z.jpg" alt="Katie-2" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-lg-4 col-md-6 mb-4">
+           <div class="col-sm-4 col-12 mb-4">
              <img src="https://i1.lensdump.com/i/I2JgSb.jpg" alt="Katie-4" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-lg-4 col-md-12 mb-4">
+           <div class="col-sm-4 col-12 mb-4">
              <img src="https://i1.lensdump.com/i/I2JCoq.jpg" alt="Chloe-3" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-lg-4 col-md-6 mb-4">
+           <div class="col-sm-4 col-12 mb-4">
              <img src="https://i.lensdump.com/i/I2JkI0.jpg" alt="Chloe-1" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-lg-4 col-md-6 mb-4">
+           <div class="col-sm-4 col-12 mb-4">
              <img src="https://i.lensdump.com/i/I2JQ8A.jpg" alt="Chloe-4" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-lg-4 col-md-6 mb-4">
+           <div class="col-sm-4 col-12 mb-4">
              <img src="https://i.lensdump.com/i/I2JVJM.jpg" alt="Chloe-5" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-lg-4 col-md-6 mb-4">
+           <div class="col-sm-4 col-12 mb-4">
              <img src="https://i.lensdump.com/i/I2J6BD.jpg" alt="Chloe-2" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-lg-4 col-md-6 mb-4">
+           <div class="col-sm-4 col-12 mb-4">
              <img src="https://i1.lensdump.com/i/I2J9eQ.jpg" alt="Chloe-6" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-lg-6 col-md-6 mb-4">
+           <div class="col-sm-6 col-12 mb-4">
              <img src="https://i1.lensdump.com/i/I2J2p9.jpg" alt="Georgie-3" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-lg-6 col-md-6 mb-4">
+           <div class="col-sm-6 col-12 mb-4">
              <img src="https://i.lensdump.com/i/I2C5Sm.jpg" alt="Georgie-6" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-lg-4 col-md-6 mb-4">
+           <div class="col-sm-4 col-12 mb-4">
              <img src="https://i.lensdump.com/i/I2JW0v.jpg" alt="Georgie-1" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-lg-4 col-md-6 mb-4">
+           <div class="col-sm-4 col-12 mb-4">
              <img src="https://i.lensdump.com/i/I2J8F2.jpg" alt="Georgie-2" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-lg-4 col-md-6 mb-4">
+           <div class="col-sm-4 col-12 mb-4">
              <img src="https://i.lensdump.com/i/I2CGxi.jpg" alt="Georgie-5" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-lg-4 col-md-4 mb-4">
+           <div class="col-sm-4 col-12 mb-4">
              <img src="https://i1.lensdump.com/i/I2JKm1.jpg" alt="David-1" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-lg-4 col-md-4 mb-4">
+           <div class="col-sm-4 col-12 mb-4">
              <img src="https://i1.lensdump.com/i/I2J4IH.jpg" alt="David-2" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-lg-4 col-md-4 mb-4">
+           <div class="col-sm-4 col-12 mb-4">
              <img src="https://i.lensdump.com/i/I2Jpoc.jpg" alt="David-3" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
