--- a/photography.html
+++ b/photography.html
@@ -209,22 +209,22 @@
              <img src="https://i.lensdump.com/i/I2Jpoc.jpg" alt="David-3" class="img-fluid mb-4">
            </div>
            <!--Grid column-->
-           <div class="col-lg-3 col-md-6 mb-4">
+           <div class="col-sm-3 col-12 mb-4">
              <img src="https://i1.lensdump.com/i/I2JHQZ.jpg" alt="Abbie-1" class="img-fluid mb-4">
+           </div>
+          <!--Grid column-->
+          <div class="col-sm-3 col-12 mb-4">
+            <img src="https://i1.lensdump.com/i/I2JO8K.jpg" alt="Abbie-2" class="img-fluid mb-4">
           </div>
           <!--Grid column-->
-          <div class="col-lg-3 col-md-6 mb-4">
-            <img src="https://i1.lensdump.com/i/I2JO8K.jpg" alt="Abbie-2" class="img-fluid mb-4">
-         </div>
-         <!--Grid column-->
-          <div class="col-lg-3 col-md-6 mb-4">
+          <div class="col-sm-3 col-12 mb-4">
             <img src="https://i.lensdump.com/i/I2JleP.jpg" alt="Abbie-3" class="img-fluid mb-4">
+          </div>
+          <!--Grid column-->
+          <div class="col-sm-3 col-12 mb-4">
+           <img src="https://i.lensdump.com/i/I2Jzym.jpg" alt="Abbie-4" class="img-fluid mb-4">
          </div>
          <!--Grid column-->
-         <div class="col-lg-3 col-md-6 mb-4">
-           <img src="https://i.lensdump.com/i/I2Jzym.jpg" alt="Abbie-4" class="img-fluid mb-4">
-        </div>
-        <!--Grid column-->
       </div>
     </div>
   </body>
