adding email address

--- a/contact.html
+++ b/contact.html
@@ -120,6 +120,11 @@
                <label class="contact" for="name">Last Name<span class="mandatory">*</span></label><br>
                <input id="name" type="text" name="full_name" placeholder="Enter your name here" required/>
              </div>
+
+           </div>
+           <div id="email-div">
+             <label class="contact" for="name">Email Address<span class="mandatory">*</span></label><br>
+             <input id="name" type="text" name="full_name" placeholder="Enter your name here" required/>
            </div>
            <div style = "padding: 20px 0;">
              <label class="contact">Any additional comments or suggestions?</label><br>
