--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
          <div class = "main-container">
            <div class = "text-center">
              <p>Thank you for checking out my work!</p>
-             <p>Please feel free to reach out! I'm very happy to answer any inquiries about my <br> services and work.  Fill in the forum below or use my socials to contact.</p>
+             <p>Please feel free to reach out! I'm very happy to answer any inquiries about my <br> services and work.  Fill in the form below or use my socials to contact me.</p>
            </div>
            <div class = "row">
              <div class = "col-sm-3">
