updated wildlife photos
Added compressed images for quicker load times

--- a/sub_nav/wildlife.html
+++ b/sub_nav/wildlife.html
@@ -27,13 +27,11 @@
             <img id = "header-img-mobile" src="../images/logo.png" width="40" height="100%" alt="">
             <span id = "header-mobile" style = "color: black;">CIARAN GRAVESTOCK</span>
           </a>
-
             <!-- Collapse button -->
             <button class="navbar-toggler first-button" type="button" data-toggle="collapse" data-target="#navbarSupportedContent20"
               aria-controls="navbarSupportedContent20" aria-expanded="false" aria-label="Toggle navigation">
               <div class="animated-icon1"><span></span><span></span><span></span></div>
             </button>
-
             <!-- Collapsible content -->
             <div class="collapse navbar-collapse text-center" id="navbarSupportedContent20">
               <ul id = "nav-bar" class="navbar-nav mx-auto float-lg-none text-lg-center">
@@ -108,7 +106,6 @@
               </li>
             </ul>
          </div>
-
       <div  class = "text-center hide-small">
         <a href="https://vimeo.com/user65399121" target = "_blank">
           <i class="fa-lg fab fa-vimeo-v social-padding">
@@ -126,39 +123,32 @@
        <div class = "main-container">
          <p class = "text-center">Capturing wildlife is always fasinating. To capture so much life within a single photo brings out some of the best creativity.</p>
          <div class="row">
-
-           <!--Grid column-->
-           <div class="col-lg-4 col-md-12 mb-4">
-
-             <img src="https://i1.lensdump.com/i/jSQfqi.jpg" alt="jSQfqi.jpg" class="img-fluid mb-4">
-
-             <img src="https://i1.lensdump.com/i/jSQFMo.jpg" alt="jSQFMo.jpg" class="img-fluid mb-4">
-
-           </div>
-           <!--Grid column-->
-
-           <!--Grid column-->
-           <div class="col-lg-4 col-md-6 mb-4">
-
-             <img src="https://i1.lensdump.com/i/jSQPjm.jpg" alt="jSQPjm.jpg" class="img-fluid mb-4">
-
-             <img src="https://i1.lensdump.com/i/jSQotK.jpg" alt="jSQotK.jpg" class="img-fluid mb-4">
-
-           </div>
-           <!--Grid column-->
-
-           <!--Grid column-->
-           <div class="col-lg-4 col-md-6 mb-4">
-
-             <img src="https://i1.lensdump.com/i/jSQuKZ.jpg" alt="jSQuKZ.jpg" class="img-fluid mb-4">
-
-             <img src="https://i1.lensdump.com/i/jSQDPP.jpg" alt="jSQDPP.jpg" class="img-fluid mb-4">
-
-           </div>
-           <!--Grid column-->
-
+            <!--Grid column-->
+            <div class="col-12 mb-4">
+              <img src="https://i2.lensdump.com/i/IBIWpm.jpg" alt="Geese on lake" class="img-fluid mb-4">
+            </div>           
+            <!--Grid column-->
+            <div class="col-md-6 col-12 mb-4">
+              <img src="https://i2.lensdump.com/i/IBIiFi.jpg" alt="Horse in field" class="img-fluid mb-4">
+            </div>           
+            <!--Grid column-->
+            <div class="col-md-6 col-12 mb-4">
+              <img src="https://i2.lensdump.com/i/IBIA1P.jpg" alt="Close up of flowers with insects on" class="img-fluid mb-4">
+            </div>           
+            <!--Grid column-->
+            <div class="col-12 mb-4">
+              <img src="https://i3.lensdump.com/i/IBIZo2.jpg" alt="Close up of cow grazing" class="img-fluid mb-4">
+            </div>                 
+            <!--Grid column-->
+            <div class="col-sm-6 col-12 mb-4">
+              <img src="https://i2.lensdump.com/i/IBI00o.jpg" alt="Close up of a ladybug on a leaf" class="img-fluid mb-4">
+            </div>
+            <!--Grid column-->
+            <div class="col-sm-6 col-12 mb-4">
+              <img src="https://i3.lensdump.com/i/IBIIB9.jpg" alt="Bee on flower" class="img-fluid mb-4">
+            </div>
+            <!--Grid column-->
          </div>
-
        </div>
     </div>
   </body>
