Nature and landscape images no longer available

--- a/sub_nav/landscape.html
+++ b/sub_nav/landscape.html
@@ -124,27 +124,19 @@
          </a>
        </div>
          <div class = "main-container">
+           <h1 class="coming-soon text-center">COMING SOON</h1>
+           <!--NOT IN USE
            <div class="row">
-
-             <!--Grid column-->
-             <div class="col-lg-6 col-md-12 mb-4">
-
-               <img src="https://i1.lensdump.com/i/jSVjS0.jpg" alt="jSVjS0.jpg" class="img-fluid mb-4">
-
-               <img src="https://i1.lensdump.com/i/jSViC3.jpg" alt="jSViC3.jpg" class="img-fluid mb-4">
-
-             </div>
-             <!--Grid column-->
-
-             <!--Grid column-->
-             <div class="col-lg-6 col-md-6 mb-4">
-
-               <img src="https://i1.lensdump.com/i/jSVAhF.jpg" alt="jSVAhF.jpg" class="img-fluid mb-4">
-
-               <img src="https://i1.lensdump.com/i/jSV8Yr.jpg" alt="jSV8Yr.jpg" class="img-fluid mb-4">
-
-             </div>
+              <div class="col-lg-6 col-md-12 mb-4">
+                <img src="https://i1.lensdump.com/i/jSVjS0.jpg" alt="jSVjS0.jpg" class="img-fluid mb-4">
+                <img src="https://i1.lensdump.com/i/jSViC3.jpg" alt="jSViC3.jpg" class="img-fluid mb-4">
+              </div>
+              <div class="col-lg-6 col-md-6 mb-4">
+                <img src="https://i1.lensdump.com/i/jSVAhF.jpg" alt="jSVAhF.jpg" class="img-fluid mb-4">
+                <img src="https://i1.lensdump.com/i/jSV8Yr.jpg" alt="jSV8Yr.jpg" class="img-fluid mb-4">
+              </div>
            </div>
+          -->
          </div>
       </div>
     </body>
