--- a/sub_nav/nature.html
+++ b/sub_nav/nature.html
@@ -124,27 +124,19 @@
          </a>
        </div>
          <div class = "main-container">
-           <div class="row">
-
-             <!--Grid column-->
-             <div class="col-lg-6 col-md-12 mb-4">
-
-               <img src="https://i1.lensdump.com/i/jSQwwC.jpg" alt="jSQwwC.jpg" class="img-fluid mb-4">
-
-               <img src="https://i1.lensdump.com/i/jSQbzv.jpg" alt="jSQbzv.jpg" class="img-fluid mb-4">
-
-             </div>
-             <!--Grid column-->
-
-             <!--Grid column-->
-             <div class="col-lg-6 col-md-6 mb-4">
-
-               <img src="https://i1.lensdump.com/i/jSQXC2.jpg" alt="jSQXC2.jpg" class="img-fluid mb-4">
-
-               <img src="https://i1.lensdump.com/i/jSQUh9.jpg" alt="jSQUh9.jpg" class="img-fluid mb-4">
-
-             </div>
-           </div>
+          <h1 class="coming-soon text-center">COMING SOON</h1>
+           <!--NOT IN USE
+            <div class="row">
+              <div class="col-lg-6 col-md-12 mb-4">
+                <img src="https://i1.lensdump.com/i/jSQwwC.jpg" alt="jSQwwC.jpg" class="img-fluid mb-4">
+                <img src="https://i1.lensdump.com/i/jSQbzv.jpg" alt="jSQbzv.jpg" class="img-fluid mb-4">
+              </div>
+              <div class="col-lg-6 col-md-6 mb-4">
+                <img src="https://i1.lensdump.com/i/jSQXC2.jpg" alt="jSQXC2.jpg" class="img-fluid mb-4">
+                <img src="https://i1.lensdump.com/i/jSQUh9.jpg" alt="jSQUh9.jpg" class="img-fluid mb-4">
+              </div>
+            </div>
+            -->
          </div>
       </div>
     </body>
