Fixed Video Alignment

--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,7 @@
              <label class="contact">Any additional comments or suggestions?</label><br>
              <textarea type="text" placeholder="Enter your comments here....."></textarea><br>
            </div>
-           <div id="submit-div" align="center">
+           <div id="submit-div">
              <button id="submit" type="submit">Submit</button>
            </div>
          </div>
