--- a/contact.html
+++ b/contact.html
@@ -111,27 +111,16 @@
              <p>Thank you for checking out my work!</p>
              <p>Please feel free to reach out! I'm very happy to answer any inquiries about my <br> services and work.  Fill in the form below or use my socials to contact me.</p>
            </div>
-           <div class = "row">
-             <div class = "col-sm-3">
-               <label class="contact" for="name">First Name<span class="mandatory">*</span></label><br>
-               <input id="name" type="text" name="full_name" placeholder="Enter your name here" required/>
-             </div>
-             <div class = "col-sm-9">
-               <label class="contact" for="name">Last Name<span class="mandatory">*</span></label><br>
-               <input id="name" type="text" name="full_name" placeholder="Enter your name here" required/>
-             </div>
-
-           </div>
-           <div id="email-div">
-             <label class="contact" for="name">Email Address<span class="mandatory">*</span></label><br>
-             <input id="name" type="text" name="full_name" placeholder="Enter your name here" required/>
-           </div>
-           <div style = "padding: 20px 0;">
-             <label class="contact">Any additional comments or suggestions?</label><br>
-             <textarea type="text" placeholder="Enter your comments here....."></textarea><br>
-           </div>
-           <div id="submit-div">
-             <button id="submit" type="submit">Submit</button>
+           <div class="conatct-form">
+             <form id="contact-form" method="post" action="">
+                <input name="name" type="text" class="form-control" placeholder="Enter your name here" required>
+                <br>
+                <input name="email" type="email" class="form-control" placeholder="Enter your email here" required>
+                <br>
+                <textarea name="message" class="form-control" placeholder="Enter your comments here......" row="4" required></textarea>
+                <br>
+                <input type="submit" class="btn btn-secondary" value="Submit">
+             </form>
            </div>
          </div>
       </div>
