--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,9 @@
                 <br>
                 <textarea name="message" class="form-control" placeholder="Enter your comments here......" row="4" required></textarea>
                 <br>
-                <input type="submit" class="btn btn-secondary" value="Submit">
+                <div class="text-center">
+                  <input type="submit" class="btn btn-secondary" value="Submit">
+                </div>
              </form>
            </div>
          </div>
