fixing php handler

--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
              <p>Thank you for checking out my work!</p>
              <p>Please feel free to reach out! I'm very happy to answer any inquiries about my <br> services and work.  Fill in the form below or use my socials to contact me.</p>
            </div>
-           <div class="conatct-form">
+           <div class="contact-form">
              <form id="contact-form" method="post" action="">
                 <input name="name" type="text" class="form-control" placeholder="Enter your name here" required>
                 <br>
@@ -120,7 +120,7 @@
                 <textarea name="message" class="form-control" placeholder="Enter your comments here......" row="4" required></textarea>
                 <br>
                 <div class="text-center">
-                  <input type="submit" class="btn btn-secondary" value="Submit">
+                  <input type="submit" class="btn btn-secondary submit" value="Submit">
                 </div>
              </form>
            </div>
