--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
              <p>Please feel free to reach out! I'm very happy to answer any inquiries about my <br> services and work.  Fill in the form below or use my socials to contact me.</p>
            </div>
            <div class="contact-form">
-             <form id="contact-form" method="post" action="">
+             <form id="contact-form" method="POST" action="contact_form_handler.php">
                 <input name="name" type="text" class="form-control" placeholder="Enter your name here" required>
                 <br>
                 <input name="email" type="email" class="form-control" placeholder="Enter your email here" required>
