--- a/contact.html
+++ b/contact.html
@@ -117,6 +117,7 @@
                 <br>
                 <input name="email" type="email" class="form-control" placeholder="Enter your email here" required>
                 <br>
+                <input name="subject" type="text" class="form-control" placeholder="Message subject" required>
                 <textarea name="message" class="form-control" placeholder="Enter your comments here......" row="4" required></textarea>
                 <br>
                 <div class="text-center">
