--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
            </div>
          </div>
          <div class = "index-container">
-           <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/391609990"
-             style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-           </div>
+           <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item"  src="https://player.vimeo.com/video/391609990"  allowfullscreen></iframe>
+          </div>
          </div>
       </div>
     </body>
