--- a/videography.html
+++ b/videography.html
@@ -97,34 +97,66 @@
             <i class="fa-lg fab fa-vimeo-v social-padding">
             </i>
           </a>
-          <a href = "https://www.instagram.com/ciarangravestock/" target = "_blank">
-            <i class="fa-lg fab fa-instagram social-padding">
-            </i>
-          </a>
-          <a href="https://www.linkedin.com/in/ciaran-gravestock-b8abb41b0/" target = "_blank">
-            <i class="fa-lg fab fa-linkedin-in social-padding">
-            </i>
-          </a>
+             <a href = "https://www.instagram.com/ciarangravestock/" target = "_blank">
+               <i class="fa-lg fab fa-instagram social-padding">
+               </i>
+             </a>
+             <a href="https://www.linkedin.com/in/ciaran-gravestock-b8abb41b0/" target = "_blank">
+               <i class="fa-lg fab fa-linkedin-in social-padding">
+               </i>
+             </a>
         </div>
         <div class = "main-container">
-          <div class="row">
-            <!--Grid column-->
-            <div class="col-lg-6 col-md-12 mb-4">
-              <div style="padding:50% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/380348552"
-                  style="position:absolute;top:0;left:0;width:100%;height:100%;"
-                  frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-              </div>
+
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item"  src="https://player.vimeo.com/video/535279519"  allowfullscreen></iframe>
             </div>
+
+            <div class="row">
+
               <!--Grid column-->
-            <div class="col-lg-6 col-md-12 mb-4">
-              <div style="padding:50% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/401885578"
-                  style="position:absolute;top:0;left:0;width:100%;height:100%;"
-                  frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+              <div class="col-lg-6 col-md-12 mb-4">
+
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe class="embed-responsive-item"  src="https://player.vimeo.com/video/541861188" allowfullscreen></iframe>
+                </div>
+
               </div>
+              <!--Grid column-->
+              <div class="col-lg-6 col-md-12 mb-4">
+
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/546863054" allowfullscreen></iframe>
+                </div>
+
+              </div>
+              <!--Grid column-->
+
             </div>
-            <!--Grid column-->
-          </div>
-        </div>
+
+            <div class="row">
+
+              <!--Grid column-->
+              <div class="col-lg-6 col-md-12 mb-4">
+
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe class="embed-responsive-item"  src="https://player.vimeo.com/video/401885578" allowfullscreen></iframe>
+                </div>
+
+              </div>
+              <!--Grid column-->
+              <div class="col-lg-6 col-md-12 mb-4">
+
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/380348552" allowfullscreen></iframe>
+                </div>
+
+              </div>
+              <!--Grid column-->
+
+            </div>
+           
+         </div>
       </div>
     </body>
 </html>
