Added animation to link

--- a/sub_nav/wildlife.html
+++ b/sub_nav/wildlife.html
@@ -36,33 +36,33 @@
             <div class="collapse navbar-collapse text-center" id="navbarSupportedContent20">
               <ul id = "nav-bar" class="navbar-nav mx-auto float-lg-none text-lg-center">
                   <li class="nav-item">
-                    <a class="nav-link" href="../about.html"><strong>About</strong></a>
+                    <a class="nav-link link link--anim1" href="../about.html"><strong>About</strong></a>
                   </li>
                 <span class="nav-link-style">
                 <div class = "hide-small inline-block-big">
                   <li class="nav-item li_dot">
-                    <a class="nav-link" href="../photography.html"><strong>Photography</strong></a>
+                    <a class="nav-link link link--anim1" href="../photography.html"><strong>Photography</strong></a>
                   </li>
                 </div>
                 <div class = "hide-big">
                   <li class="nav-item dropdown">
-                    <a class="nav-link" href="../photography.html" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link link link--anim1" href="../photography.html" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <strong>Photography</strong>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <a class="dropdown-item" href="../photography.html"><strong>Portraiture</strong></a>
-                      <a class="dropdown-item" href="landscape.html"><strong>Landscape</strong></a>
-                      <a class="dropdown-item" href="nature.html"><strong>Nature</strong></a>
-                      <a class="dropdown-item" href="wildlife.html"><strong>Wildlife</strong></a>
+                      <a class="dropdown-item link link--anim1" href="../photography.html"><strong>Portraiture</strong></a>
+                      <a class="dropdown-item link link--anim1" href="landscape.html"><strong>Landscape</strong></a>
+                      <a class="dropdown-item link link--anim1" href="nature.html"><strong>Nature</strong></a>
+                      <a class="dropdown-item link link--anim1" href="wildlife.html"><strong>Wildlife</strong></a>
                     </div>
                   </li>
                 </div>
                 <li class="nav-item li_dot">
-                  <a class="nav-link" href="../videography.html"><strong>Videography</strong></a>
+                  <a class="nav-link link link--anim1" href="../videography.html"><strong>Videography</strong></a>
                 </li>
               </span>
                 <li class="nav-item li_dot">
-                  <a class="nav-link" href='../contact.html'><strong>Contact</strong></a>
+                  <a class="nav-link link link--anim1" href='../contact.html'><strong>Contact</strong></a>
                 </li>
                 <div class = "hide-big">
                   <ul class = "navbar-nav nav-flex-icons flex-row">
