--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@
                 <a class="nav-link link link--anim1" href="about.html"><strong>About</strong></a>
               </li>
               <span class="nav-link-style">
-                <div class = "hide-small inline-block-big">
+                <div class = "inline-block-big"> <!--Add class 'hide-small' when adding dropdown menu back-->
                   <li class="nav-item li_dot">
                       <a class="nav-link link link--anim1" href="photography.html"><strong>Photography</strong></a>
                   </li>
                 </div>
+                <!---
                 <div class = "hide-big">
                     <li class="nav-item dropdown">
                       <a class="nav-link link link--anim1" href="photography.html" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -59,7 +60,8 @@
                         <a class="dropdown-item link link--anim1" href="sub_nav/wildlife.html"><strong>Wildlife</strong></a>
                       </div>
                     </li>
-                </div>
+                </div> 
+              -->
                 <li class="nav-item li_dot">
                     <a class="nav-link link link--anim1" href="videography.html"><strong>Videography</strong></a>
                 </li>
