--- a/about.html
+++ b/about.html
@@ -41,11 +41,12 @@
                     <a class="nav-link" href="about.html"><strong>About</strong></a>
                   </li>
                 <span class="nav-link-style">
-                <div class = "hide-small inline-block-big">
+                <div class = "inline-block-big"> <!--Add class 'hide-small' when adding dropdown menu back-->
                   <li class="nav-item li_dot">
                     <a class="nav-link" href="photography.html"><strong>Photography</strong></a>
                   </li>
                 </div>
+                <!--
                 <div class = "hide-big">
                   <li class="nav-item dropdown">
                     <a class="nav-link" href="photography.html" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -59,6 +60,7 @@
                     </div>
                   </li>
                 </div>
+                -->
                 <li class="nav-item li_dot">
                   <a class="nav-link" href="videography.html"><strong>Videography</strong></a>
                 </li>
