--- a/videography.html
+++ b/videography.html
@@ -41,11 +41,12 @@
                     <a class="nav-link link link--anim1" href="about.html"><strong>About</strong></a>
                   </li>
                 <span class="nav-link-style">
-                <div class = "hide-small inline-block-big">
+                <div class = "inline-block-big"> <!--Add class 'hide-small' when adding dropdown menu back-->
                   <li class="nav-item li_dot">
                     <a class="nav-link link link--anim1" href="photography.html"><strong>Photography</strong></a>
                   </li>
                 </div>
+                <!--
                 <div class = "hide-big">
                   <li class="nav-item dropdown">
                     <a class="nav-link link link--anim1" href="photography.html" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -59,6 +60,7 @@
                     </div>
                   </li>
                 </div>
+                -->
                 <li class="nav-item li_dot">
                   <a class="nav-link link link--anim1" href="videography.html"><strong>Videography</strong></a>
                 </li>
@@ -106,7 +108,7 @@
                </i>
              </a>
         </div>
-        <div class = "main-container">
+        <div class = "index-container">
 
             <div class="embed-responsive embed-responsive-16by9">
               <iframe class="embed-responsive-item"  src="https://player.vimeo.com/video/535279519"  allowfullscreen></iframe>
