Fixed Nav dot not lining up

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent20">
             <ul id = "nav-bar" class="navbar-nav mx-auto float-lg-none text-lg-center ">
               <li class="nav-item">
-                <a class="nav-link link link--anim1" href="about.html"><strong>About</strong></a>
+                <a class="nav-link link link--anim1 about" href="about.html"><strong>About&nbsp;&nbsp;</strong></a>
               </li>
               <span class="nav-link-style">
                 <div class = "inline-block-big"> <!--Add class 'hide-small' when adding dropdown menu back-->
