--- a/photography.html
+++ b/photography.html
@@ -38,7 +38,7 @@
             <div class="collapse navbar-collapse text-center" id="navbarSupportedContent20">
               <ul id = "nav-bar" class="navbar-nav mx-auto float-lg-none text-lg-center">
                   <li class="nav-item">
-                    <a class="nav-link link link--anim1" href="about.html"><strong>About</strong></a>
+                    <a class="nav-link link link--anim1" href="about.html"><strong>About&nbsp;&nbsp;</strong></a>
                   </li>
                 <span class="nav-link-style">
                 <div class = "inline-block-big"> <!--Add class 'hide-small' when adding dropdown menu back-->
