--- a/about.html
+++ b/about.html
@@ -38,12 +38,12 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent20">
               <ul id = "nav-bar" class="navbar-nav mx-auto float-lg-none text-lg-center">
                   <li class="nav-item">
-                    <a class="nav-link" href="about.html"><strong>About&nbsp;&nbsp;</strong></a>
+                    <a class="nav-link link link--anim1 about" href="about.html"><strong>About&nbsp;&nbsp;</strong></a>
                   </li>
                 <span class="nav-link-style">
                 <div class = "inline-block-big"> <!--Add class 'hide-small' when adding dropdown menu back-->
                   <li class="nav-item li_dot">
-                    <a class="nav-link" href="photography.html"><strong>Photography</strong></a>
+                    <a class="nav-link link link--anim1 about" href="photography.html"><strong>Photography</strong></a>
                   </li>
                 </div>
                 <!--
@@ -62,11 +62,11 @@
                 </div>
                 -->
                 <li class="nav-item li_dot">
-                  <a class="nav-link" href="videography.html"><strong>Videography</strong></a>
+                  <a class="nav-link link link--anim1 about" href="videography.html"><strong>Videography</strong></a>
                 </li>
               </span>
                 <li class="nav-item li_dot">
-                  <a class="nav-link" href='contact.html'><strong>Contact</strong></a>
+                  <a class="nav-link link link--anim1 about" href='contact.html'><strong>Contact</strong></a>
                 </li>
                 <div class = "hide-big">
                   <ul class = "navbar-nav nav-flex-icons flex-row">
