Fixed Padding to index-container
Removed about and main containers. Fixed padding for index-container so all elements are the correct sizes at the correct resolutions

--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
                </i>
              </a>
            </div>
-         <div class = "about-container">
+         <div class = "index-container">
            <div class = "row">
              <div class = "col-sm-4">
                  <img id = "profile" src="images/frosty-1.jpg" class="img-responsive" width = "100%" max-height = "100%" alt="myself.jpg" border="0" />
