--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
                </i>
              </a>
            </div>
-         <div class = "main-container">
+         <div class = "index-container">
            <div class = "text-center">
              <p>Thank you for checking out my work!</p>
              <p>Please feel free to reach out! I'm very happy to answer any inquiries about my <br> services and work.  Fill in the form below or use my socials to contact me.</p>
