--- a/photography.html
+++ b/photography.html
@@ -126,7 +126,7 @@
            </i>
          </a>
         </div>
-        <div class = "main-container">
+        <div class = "index-container">
           <div class="row">
             <!--Grid column-->
             <div class="col-12 mb-4">
